--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,59 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+
   build:
-    # The type of runner that the job will run on
+    name: Build
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: print
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        echo $HOME
+        echo $GITHUB_WORKSPACE
+        pwd
+
+    - name: Install gomod-gen
+      run: |
+        go get github.com/appscodelabs/gomod-gen
+        curl -sL https://github.com/appscodelabs/gomod-gen/raw/master/kubernetes/v1.18.3/go.mod.json > /tmp/go.mod.json
+
+    - name: Prepare git
+      run: |
+        git config --global user.name "1gtm"
+        git config --global user.email "1gtm@appscode.com"
+
+    - name: Install hub
+      shell: bash
+      run: |
+        curl -fsSL https://github.com/github/hub/raw/master/script/get | bash -s 2.14.1
+
+    - name: Create pull request
+      env:
+        GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
+      run: |
+        git clone https://1gtm:${GITHUB_TOKEN}@github.com/stashed/apimachinery.git repo
+        cd repo
+        export PR_BRANCH=k8s-gomod-refresher-$(date +%s)
+        echo $PR_BRANCH
+        git checkout -b $PR_BRANCH
+        gomod-gen --gomod-json-file=/tmp/go.mod.json
+        git add --all
+        git commit -a -s -m "Update to Kubernetes v1.18.3"
+        git push origin $PR_BRANCH -f
+        $GITHUB_WORKSPACE/bin/hub pull-request -m "Update to Kubernetes v1.18.3"
