--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,41 +22,45 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: print
+    - name: Install GitHub CLI
       run: |
-        echo $HOME
-        echo $GITHUB_WORKSPACE
-        pwd
+        curl -fsSL -O https://github.com/cli/cli/releases/download/v0.9.0/gh_0.9.0_linux_amd64.deb
+        sudo apt install ./gh_*_linux_amd64.deb
+        rm ./gh_*_linux_amd64.deb
 
     - name: Install gomod-gen
       run: |
-        go get github.com/appscodelabs/gomod-gen
-        curl -sL https://github.com/appscodelabs/gomod-gen/raw/master/kubernetes/v1.18.3/go.mod.json > /tmp/go.mod.json
+        curl -fsSL -O https://github.com/appscodelabs/gomod-gen/releases/download/v0.1.0/gomod-gen-linux-amd64
+        chmod +x gomod-gen-linux-amd64
+        sudo mv gomod-gen-linux-amd64 /usr/local/bin/gomod-gen
 
     - name: Prepare git
       run: |
         git config --global user.name "1gtm"
         git config --global user.email "1gtm@appscode.com"
 
-    - name: Install hub
-      shell: bash
+    - name: Install GitHub CLI
       run: |
         curl -fsSL https://github.com/github/hub/raw/master/script/get | bash -s 2.14.1
         sudo mv bin/hub /usr/local/bin
 
-    - name: Create pull request
-      env:
-        GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
+    - name: Update desired go.mod
       run: |
-        git clone https://1gtm:${GITHUB_TOKEN}@github.com/stashed/apimachinery.git repo
-        cd repo
-        export PR_BRANCH=k8s-gomod-refresher-$(date +%s)
-        echo $PR_BRANCH
-        git checkout -b $PR_BRANCH
-        gomod-gen --gomod-json-file=/tmp/go.mod.json
-        go mod tidy
-        go mod vendor
-        git add --all
-        git commit -a -s -m "Update to Kubernetes v1.18.3"
-        git push origin $PR_BRANCH -f
-        hub pull-request -m "Update to Kubernetes v1.18.3"
+        ./v1.18.3/update.sh
+
+    # - name: Create pull request
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
+    #   run: |
+    #     git clone https://1gtm:${GITHUB_TOKEN}@github.com/stashed/apimachinery.git repo
+    #     cd repo
+    #     export PR_BRANCH=k8s-gomod-refresher-$(date +%s)
+    #     echo $PR_BRANCH
+    #     git checkout -b $PR_BRANCH
+    #     gomod-gen --gomod-json-file=/tmp/go.mod.json
+    #     go mod tidy
+    #     go mod vendor
+    #     git add --all
+    #     git commit -a -s -m "Update to Kubernetes v1.18.3"
+    #     git push origin $PR_BRANCH -f
+    #     hub pull-request -m "Update to Kubernetes v1.18.3"
