--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,17 +24,17 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
+    - name: Install yq
+      run: |
+        curl -fsSL -o yq https://github.com/mikefarah/yq/releases/download/3.3.0/yq_linux_amd64
+        chmod +x yq
+        sudo mv yq /usr/local/bin/yq
+
     - name: Install Kubernetes CLI
       run: |
         curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl
         chmod +x ./kubectl
         sudo mv ./kubectl /usr/local/bin/kubectl
-
-    # - name: Install GitHub CLI
-    #   run: |
-    #     curl -fsSL -O https://github.com/cli/cli/releases/download/v0.9.0/gh_0.9.0_linux_amd64.deb
-    #     sudo apt install ./gh_*_linux_amd64.deb
-    #     rm ./gh_*_linux_amd64.deb
 
     - name: Install gomod-gen
       run: |
