Run against repos.txt
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,4 +60,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
       run: |
-        ./refresh-repo.sh r2.txt
+        ./refresh-repo.sh repos.txt
